src/objects/Uncomitted_Form_Change__c.object
<CustomObject>
    <description>Using this table to queue up changes for HopeRx forms. This should provide me with a work around to the damned viewstate issues that have been plaguing me</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_ID__c</fullName>
        <label>Form ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Time__c</fullName>
        <label>Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VF_Page__c</fullName>
        <label>VF Page</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notes</fullName>
                </value>
                <value>
                    <fullName>POT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Uncomitted Form Change</label>
    <nameField>
        <displayFormat>UFCN-{0000}</displayFormat>
        <label>Uncomitted Form Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Uncomitted Form Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>